--- a/Documents/00_Бортжурнал.md
+++ b/Documents/00_Бортжурнал.md
@@ -12,3 +12,11 @@
 ### Использование Winbond W25QXX SPI Flash
 [Статья о памяти Winbond W25QXX SPI Flash](https://russianblogs.com/article/27961587907/)
 [Упоминание использования Winbond W25QXX SPI для Altera](https://community.intel.com/t5/Programmable-Devices/Altera-USB-Blaster-II-is-not-working-properly-while-programming/td-p/669052)
+
+
+
+### Исправления в v1
+
+1. 10uF в корпусе 0603 у нас в наличии нет, лучше 0805 использовать
+(C29, C41, C42, C43, C44, C46, C47, C48, C49)
+2. Разъем JTAG не подключил к GND. Pin 10 -> GND. 
